2004-06-13  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: split close_stack in 2, one for the last pass the other
	for the previous passes.
	Simplification of the code handling paragraph closing.
	More macros don't begin paragraphs.
	Pass opened commands through @tab and @item.
	Every @def* is considered to have arguments.
	continue the @def* line if there is a @ at the end line.
	* texi2html.pl, texi2html.init: Handle @float, @listoffloats, 
	@caption, @shortcaption,
	@ordf, @ordm, @registeredsymbol, @deftypecv, @LaTeX, @indicateurl,
	@docbook, @ifdocbook, @ifnotdocbook,
	@comma, @headitem, @quotation second arg, @acronym second arg.
	@url is now a synonym for @uref.
	* doc/texi2html.texi: bring up-to-date.

2004-04-28  Patrice Dumas  <dumas@centre-cired.fr> 

	* T2h_i18n.pl, texi2html.pl: pass the state to the internationalized
	strings if needed. 

2004-04-28  Patrice Dumas  <dumas@centre-cired.fr> 
	
	* texi2html.init, texi2html.pl: generate unformatted text with 
	text protected and %unformatted_text_* hashs used.
	use unformatted text in <title> element.
	put preparation of special styles in texi2html.init.
	copying_comment formats the copying comment.

2004-04-26  Patrice Dumas  <dumas@centre-cired.fr> 

	* example/book.init: stick to the same style for manual not split at
	node.
	* texi2html.pl: handle better @today even in non english cases.
	don't use (encoding) in open, but set it in binmode (perl seems
	unhappy otherwise ?).
	* texi2html.init: don't enclose paragraph in <p> when it is the first
	paragraph of enumerate or itemize, as the <li> is allready something
	like a begining of paragraph.

2004-03-25  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Ignore texi2html.spec.

2004-03-25  Derek Price  <derek@ximbiot.com>

	* NEWS: Add section for 1.72.
	* configure.in: Update to dev version 1.71.  Generate texi2html.spec.
	* texi2html.spec: Move this file...
	* texi2html.spec.in: ...here and replace some strings with text